syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/communicationmethodlabel";

message CommunicationMethodLabel {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string communication_method_label_code = 3;

    string caption = 4;
}

message DoReadCommunicationMethodLabelRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string communication_method_label_code = 3;
}

message DoReadCommunicationMethodLabelResponse {
    CommunicationMethodLabel communication_method_label = 1;
}

message DoReadAllCommunicationMethodLabelRequest { 
    string contact_system_code = 1;

    string communication_method_code = 2;
}

message DoReadAllCommunicationMethodLabelResponse {
    repeated CommunicationMethodLabel communication_method_label = 1;
}

message DoSaveCommunicationMethodLabelRequest { 
    CommunicationMethodLabel communication_method_label = 1;
}

message DoSaveCommunicationMethodLabelResponse {
    bool result = 1;
}

message DoDeleteCommunicationMethodLabelRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string communication_method_label_code = 3;
}

message DoDeleteCommunicationMethodLabelResponse {
    bool result = 1;
}

service CommunicationMethodLabelService { 
    rpc DoRead (DoReadCommunicationMethodLabelRequest) returns (DoReadCommunicationMethodLabelResponse);

    rpc DoReadAll (DoReadAllCommunicationMethodLabelRequest) returns (DoReadAllCommunicationMethodLabelResponse);

    rpc DoSave (DoSaveCommunicationMethodLabelRequest) returns (DoSaveCommunicationMethodLabelResponse);

    rpc DoDelete (DoDeleteCommunicationMethodLabelRequest) returns (DoDeleteCommunicationMethodLabelResponse);
}